<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/spinnerCategory"
            android:layout_marginLeft="32dp" android:layout_marginRight="32dp" android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etName" android:layout_marginLeft="32dp" android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp" android:hint="@string/dialog_name_hint"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1"
                android:ems="5"
                android:id="@+id/etAmount" android:layout_marginLeft="32dp"
                android:layout_marginBottom="8dp" android:hint="@string/dialog_amount_hint"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                android:ems="5"
                android:id="@+id/etPrice" android:layout_marginRight="32dp"
                android:layout_marginBottom="8dp" android:hint="@string/dialog_price_hint"/>

    </LinearLayout>


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/etDetails" android:layout_marginLeft="32dp" android:layout_marginRight="32dp"
            android:hint="@string/dialog_notes_hint" android:layout_marginBottom="32dp"/>
</LinearLayout>