<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view"
        android:layout_margin="10dp"
        android:theme="@style/CardView.Light"
        android:paddingBottom="10dp"
        card_view:cardElevation="10dp">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="wrap_content">
        <ImageView
                android:layout_width="84dp"
                android:layout_height="85dp" card_view:srcCompat="@mipmap/ic_launcher_round"
                android:id="@+id/ivIcon" android:layout_marginTop="16dp"
                card_view:layout_constraintTop_toTopOf="parent" card_view:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                card_view:layout_constraintBottom_toBottomOf="@+id/tvAmount"/>
        <TextView
                android:text="@string/row_category_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCategory" card_view:layout_constraintStart_toEndOf="@+id/ivIcon"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                card_view:layout_constraintTop_toTopOf="parent" card_view:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                card_view:layout_constraintHorizontal_bias="0.087" android:textSize="14sp"
                android:textColor="#DFD9D9"/>
        <TextView
                android:text="@string/row_name_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvName" android:layout_marginTop="12dp"
                card_view:layout_constraintTop_toBottomOf="@+id/tvCategory"
                card_view:layout_constraintStart_toStartOf="@+id/tvCategory"
                android:textSize="18sp" android:textColor="#000000"
                android:layout_marginEnd="16dp" card_view:layout_constraintEnd_toStartOf="@+id/btnEdit"
                android:layout_marginRight="16dp" card_view:layout_constraintHorizontal_bias="0.0"
                android:maxEms="5"/>
        <CheckBox
                android:text="@string/row_checkbox_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbBought" android:layout_marginTop="24dp"
                card_view:layout_constraintTop_toBottomOf="@+id/ivIcon"
                card_view:layout_constraintStart_toStartOf="@+id/ivIcon"
                android:textSize="12sp"
                android:layout_marginBottom="16dp" card_view:layout_constraintBottom_toTopOf="@+id/guideline"/>
        <TextView
                android:text="@string/row_amount_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAmount" card_view:layout_constraintStart_toStartOf="@+id/tvName"
                card_view:layout_constraintTop_toBottomOf="@+id/tvName" android:layout_marginTop="16dp"
                android:textColor="#857F82"/>
        <Button
                android:text="@string/row_btnEdit"
                android:layout_width="70dp"
                android:layout_height="38dp"
                android:id="@+id/btnEdit" android:layout_marginTop="36dp"
                card_view:layout_constraintTop_toTopOf="parent" card_view:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                android:background="@drawable/btn_rounded" android:textColor="#000000" android:fadingEdge="horizontal"
                android:textSize="14sp"/>
        <Button
                android:text="@string/row_btnDelete"
                android:layout_width="71dp"
                android:layout_height="38dp"
                android:id="@+id/btnDelete" card_view:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                card_view:layout_constraintStart_toStartOf="@+id/btnEdit"
                android:background="@drawable/btn_rounded" android:textColor="#000000" android:fadingEdge="horizontal"
                card_view:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                card_view:layout_constraintTop_toBottomOf="@+id/tvAmount"
                android:layout_marginBottom="8dp" card_view:layout_constraintBottom_toTopOf="@+id/guideline"
                card_view:layout_constraintVertical_bias="0.0"/>

        <TextView
                android:text="@string/row_description_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvDetails" card_view:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                card_view:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                card_view:layout_constraintBottom_toBottomOf="parent" android:background="#FFFFFF"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginTop="16dp"/>
        <android.support.constraint.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" card_view:layout_constraintGuide_begin="170dp"
                android:id="@+id/guideline"/>
    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>